# agentmemory

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/services/: __init__.py  anthropic.py  memory.py
backend/scripts/: seed_long_term_direct.py  start_backend.py
backend/seeds/: devrel_long_term_memories.json
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
