[project]
name = "redis-devrel-backend"
version = "0.1.0"
description = "Redis DevRel AI Content Strategist — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "anthropic==0.94.1",
    "agent-memory-client==0.14.0",
    "pydantic-settings==2.13.1",
    "python-dotenv==1.2.2",
]
